--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>New Sails App</title>
+    <title><%- title %> |New Sails App</title>
 
     <!-- Viewport mobile tag for sensible mobile support -->
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-
+    <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css">
+    <link rel="stylesheet" href="//netdna.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="/styles/app.css">
     
     <!--  
         Stylesheets and Preprocessors
@@ -29,14 +31,40 @@
     -->
 
     <!--STYLES-->
+    <link rel="stylesheet" href="/styles/app.css">
     <link rel="stylesheet" href="/styles/importer.css">
     <!--STYLES END-->
   </head>
 
   <body>
-    <%- body %>
-
-
+    <div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+      <div class="container">
+        <div class="navbar-header">
+          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+          <a class="navbar-brand" href="#"><i class="fa fa-check"></i> TODOIT</a>
+        </div>
+        <div class="collapse navbar-collapse">
+          <ul class="nav navbar-nav">
+            <li class="active"><a href="/">Home</a></li>
+            <li><a href="/about">About</a></li>
+            <li><a href="/list">My List</a></li>
+          </ul>
+        </div>
+      </div>
+    </div> 
+    <div class="container">
+        <div class="row featurette">
+            <div class="col-md-7">
+              <h2 class="featurette-heading"><%- title %></h2>
+              <%- body %>
+            </div>
+        </div>
+    </div>
 
     <!--
         Client-side Templates
@@ -89,6 +117,8 @@
 
     <!--SCRIPTS-->
     <script src="/js/dependencies/sails.io.js"></script>
+    <script src="/js/app2.js"></script>
+    <script src="/js/io_logger.js"></script>
     <!--SCRIPTS END-->
   </body>
 </html>
