--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title><%- title %> |New Sails App</title>
+    <title><%- title %> | New Sails App</title>
 
     <!-- Viewport mobile tag for sensible mobile support -->
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
@@ -50,11 +50,23 @@
         </div>
         <div class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
-            <li class="active"><a href="/">Home</a></li>
-            <li><a href="/about">About</a></li>
+            <li class="active">
+               < % - link_to('Home', '/') % >
+               <a href="/">Home</a></li>
+            <li>
+               < % - link_to('О Нас', '/about') % >
+            <a href="/about">About</a>
+
+            </li>
             <li><a href="/list">My List</a></li>
           </ul>
         </div>
+<form method="POST" action="/user/login">
+<input name="email" value="rugoogle.ru">
+<input name="password" value="demo123456">
+&name=test
+<button type="submit"></button>
+</form>
       </div>
     </div> 
     <div class="container">
