--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -89,6 +89,7 @@
 
     <!--SCRIPTS-->
     <script src="/js/dependencies/sails.io.js"></script>
+    <script src="/js/io_logger.js"></script>
     <!--SCRIPTS END-->
   </body>
 </html>
