--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -5,10 +5,6 @@
 
     <!-- Viewport mobile tag for sensible mobile support -->
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-    <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css">
-    <link rel="stylesheet" href="//netdna.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="/styles/app.css">
-    
     <!--  
         Stylesheets and Preprocessors
         ==============================
@@ -29,7 +25,9 @@
             + Import stylesheets from other directories
             + Use a different or additional preprocessor, like SASS, SCSS or Stylus
     -->
-
+    <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css">
+    <link rel="stylesheet" href="//netdna.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css">
+ 
     <!--STYLES-->
     <link rel="stylesheet" href="/styles/app.css">
     <link rel="stylesheet" href="/styles/importer.css">
@@ -51,22 +49,21 @@
         <div class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
             <li class="active">
-               < % - link_to('Home', '/') % >
+               <!-- % - link_to('Home', '/') % -->
                <a href="/">Home</a></li>
             <li>
-               < % - link_to('О Нас', '/about') % >
+               <!-- % - link_to('О Нас', '/about') % -->
             <a href="/about">About</a>
 
             </li>
             <li><a href="/list">My List</a></li>
           </ul>
         </div>
-<form method="POST" action="/user/login">
-<input name="email" value="rugoogle.ru">
-<input name="password" value="demo123456">
-&name=test
-<button type="submit"></button>
-</form>
+    <form method="POST" action="/user/login" class="form">
+        <input name="email" value="demo@demo.com">
+        <input name="password" value="demo123456"> 
+    <button type="submit">Авторизация</button>
+    </form>
       </div>
     </div> 
     <div class="container">
@@ -77,7 +74,14 @@
             </div>
         </div>
     </div>
-
+    <div class="container">
+        <hr>
+        <footer class="footer">
+            <div class="pull-right">
+            <div>Application footer</div>
+            </div>
+        </footer>
+    </div>
     <!--
         Client-side Templates
         ========================
