--- a/views/auth/login.ejs
+++ b/views/auth/login.ejs
@@ -1,7 +1,15 @@
 <p class="lead">
-    <form method="POST" action="/login" class="form">
-        <input name="email" value="rugoogle.ru" class="form-controll">
-        <input name="password" value="demo123456" class="form-controll">
-        <button type="submit">Вход</button>
+    <form method="POST" action="/login" class="form well well-sm">
+    <div class="form-group">
+        <label for="email">E-Mail:</label>
+        <input name="email" value="rugoogle.ru" class="form-control">
+    </div>
+    <div class="form-group">
+        <label for="password">Password:</label>
+        <input name="password" value="demo123456" class="form-control">
+    </div>
+    <div class="form-group">
+        <button type="submit" class="btn btn-success">Вход</button>
+    </div>
     </form>
 </p>
