--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -44,19 +44,18 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#"><i class="fa fa-check"></i> TODOIT</a>
+          <a class="navbar-brand" href="#"><i class="fa fa-check"></i>PlannerNewspaper</a>
         </div>
         <div class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
             <li class="active">
-               <!-- % - link_to('Home', '/') % -->
-               <a href="/">Home</a></li>
+               <%- link_to('Главная', '/') %> 
             <li>
-               <!-- % - link_to('О Нас', '/about') % -->
-            <a href="/about">About</a>
-
+               <%- link_to('О приложении', '/about') %>  
             </li>
-            <li><a href="/list">My List</a></li>
+            <li>
+                <%- link_to('Пользователи', '/user') %>  
+            </li>
           </ul>
  
         <form method="POST" action="/user/login" class="form form-inline pull-right">
