--- a/views/about/index.ejs
+++ b/views/about/index.ejs
@@ -1,1 +1,6 @@
-<p class="lead">This is an example application to show how to use Sails.js with Angular. If you would like to follow along with how it was created, check out this <a href="http://www.tysoncadenhead.com/blog/sails-ninja-intro">blog series</a> that walks you through step by step.</p>
+<section id="page-about"> 
+    <h2> О приложении</h2>
+    <p class="lead">
+    Веб-приложение "Планировщик выпуска газет"
+    </p>
+</section>
