complite User registration - flash messages add

--- a/views/user/new.ejs
+++ b/views/user/new.ejs
@@ -1,19 +1,23 @@
- <form action="/user/create" method="POST" class="form-signin">
-	<h2 class="form-signin-heading">Регистрация пользователя</h2>
+<form action="/user/create" method="POST" class="form-signin">
+    <h2 class="form-signin-heading">Регистрация пользователя</h2> 
+    <% if(flash && flash.err) { %>
+    <ul class="alert alert-success">
+        <% Object.keys(flash.err).forEach(function(error) { %>
+        <li><%- JSON.stringify(flash.err[error]) %></li>
+        <% }) %>
+    </ul>
+    <% } %>
+    <input type="text" class="form-control" placeholder="Имя" name="name">
 
- 
+    <input type="text" class="form-control" placeholder="Должность" name="title">
 
-	<input type="text" class="form-control" placeholder="Имя" name="name">
+    <input type="text" class="form-control" placeholder="E-mail" name="email">
 
-	<input type="text" class="form-control" placeholder="Должность" name="title">
+    <input type="text" class="form-control" placeholder="пароль" name="password">
 
-	<input type="text" class="form-control" placeholder="E-mail" name="email">
+    <input type="text" class="form-control" placeholder="подтверждение пароля" name="confirmation">
+    <br/>
 
-	<input type="text" class="form-control" placeholder="пароль" name="password">
-
-	<input type="text" class="form-control" placeholder="подтверждение пароля" name="confirmation">
-	<br/>
-
-	<input type="submit" class="btn btn-lg btn-primary btn-block" value="Зарегистрировать"/>
-	<input type="hidden" name="_csrf" value="<%= _csrf %>" />
+    <input type="submit" class="btn btn-lg btn-primary btn-block" value="Зарегистрировать"/>
+    <input type="hidden" name="_csrf" value="<%= _csrf %>" />
 </form>
