--- a/assets/styles/app.css
+++ b/assets/styles/app.css
@@ -7,10 +7,29 @@ and open the template in the editor.
     Created on : 30.09.2014, 18:02:26
     Author     : nikolay.gerzhan@gmail.com
 */
-body {
+* {
+	margin: 0;
+}
+html, body {
+	height: 100%;
+}
+body { 
     padding-top: 50px;
 }
 .starter-template {
     padding: 40px 15px;
     text-align: center;
 }
+ 
+.wrapper {
+	min-height: 100%;
+	height: auto !important; /* This line and the next line are not necessary unless you need IE6 support */
+	height: 100%;
+	margin: 0 auto -155px; /* the bottom margin is the negative value of the footer's height */
+}
+.footer, .push {
+	height: 155px; /* .push must be the same height as .footer */
+}
+/*
+Sticky Footer by Ryan Fait
+http://ryanfait.com/*/
