--- a/views/auth/login.ejs
+++ b/views/auth/login.ejs
@@ -1,8 +1,8 @@
-<p class="lead">
-    <form method="POST" action="/login" class="form well well-sm">
+<!-- template 'auth/login.ejs'-->
+<form method="POST" action="/login" class="form well well-sm">
     <div class="form-group">
         <label for="email">E-Mail:</label>
-        <input name="email" value="rugoogle.ru" class="form-control">
+        <input name="email" value="demo@demo.com" class="form-control">
     </div>
     <div class="form-group">
         <label for="password">Password:</label>
@@ -11,5 +11,5 @@
     <div class="form-group">
         <button type="submit" class="btn btn-success">Вход</button>
     </div>
-    </form>
-</p>
+</form> 
+<!-- //template 'auth/login.ejs'-->
