--- a/views/user/index.ejs
+++ b/views/user/index.ejs
@@ -20,7 +20,14 @@
             <td><%= user.email %></td>
             <td><a href="/user/show/<%= user.id %>" class="btn btn-sm btn-primary">Просмотреть</a></td>
             <td><a href="/user/edit/<%= user.id %>" class="btn btn-sm btn-warning">Редактировать</a></td>
-            <td><a href="/user/destroy/<%= user.id %>" class="btn btn-sm btn-danger">Удалить</a></td>
+            <td>
+                <!--                <a href="/user/destroy/<%= user.id %>" class="btn btn-sm btn-danger">Удалить</a>-->
+                <form method="POST" action="/user/destroy/<%= user.id %>">
+                    <input type="hidden" name="_method" value="delete" />
+                    
+                    <input type="submit" class="btn btn-sm btn-danger" value="Удалить"/>
+                </form>
+            </td>
         </tr>
 
         <% }) %>
