update Home page

--- a/views/home/index.ejs
+++ b/views/home/index.ejs
@@ -1,2 +1,22 @@
-<p class="lead">Check it out. Check it off.</p>
-<img src="http://cdn2.content.compendiumblog.com/uploads/user/4268c6b6-ce2f-102a-80e3-0015c5f70ec2/aa4211a4-bb44-46d7-8e55-e2bf85cbb4a4/Image/01056b67869d6ad5848d9df376132aa5/questions_to_ask.jpg" />
+<section class="container">
+    <h2>Планировщик номеров(выпусков) газет</h2>
+    <p class="lead row"> 
+    </p>   
+    <aside class="col-md-4">
+        <img src="http://cdn2.content.compendiumblog.com/uploads/user/4268c6b6-ce2f-102a-80e3-0015c5f70ec2/aa4211a4-bb44-46d7-8e55-e2bf85cbb4a4/Image/01056b67869d6ad5848d9df376132aa5/questions_to_ask.jpg" />
+    </aside>
+    <nav class="col-md-8">
+        <ul class="list-group">
+            <li class="list-group-item">
+                <%- link_to('Главная', '/') %> 
+            </li>
+            <li class="list-group-item">
+                <%- link_to('Список пользователей', '/user') %> 
+            </li>
+            <li class="list-group-item">
+                <%- link_to('О приложении', '/about') %> 
+            </li>
+        </ul>
+    </nav>
+
+</section>
