add link to "newspapers"

--- a/views/home/index.ejs
+++ b/views/home/index.ejs
@@ -11,6 +11,9 @@
                 <%- link_to('Главная', '/') %> 
             </li>
             <li class="list-group-item">
+                <%- link_to('Выпуски(номера) газет', '/newspapers') %> 
+            </li>
+            <li class="list-group-item">
                 <%- link_to('Список пользователей', '/user') %> 
             </li>
             <li class="list-group-item">
