--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -68,8 +68,8 @@
     </div> 
     <div class="container">
         <div class="row featurette">
-            <div class="col-md-7">
-              <h2 class="featurette-heading"><%- title %></h2>
+            <div class="col-md-12">
+<!--              <h2 class="featurette-heading"><%- title %></h2>-->
               <%- body %>
             </div>
         </div>
