--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -50,11 +50,16 @@
                     <ul class="nav navbar-nav">
                         <li class="<% if (title === 'Главная') { %>active<% } %>">
                             <%- link_to('Главная', '/') %> 
-                        </li>      
+                        </li>       
+                        <% if (session.authenticated) { %>
+                        <li class="active"><a href="/user/show/<%= session.User.id %>"><%= session.User.name %> </a> </li>
+                        <% } %>
                         <% if(session.authenticated){ %>    
                         <li class="<% if (title === 'Список выпусков(номеров) газет') { %>active<% } %>">
                             <%- link_to('Выпуски(номера) газет', '/newspapers') %>  
                         </li>
+                        <%}%>
+                        <% if(session.authenticated && session.User.admin){ %>     
                         <li class="<% if (title === 'Список пользователей') { %>active<% } %>">
                             <%- link_to('Пользователи', '/user') %>  
                         </li> 
