--- a/views/spi/index.ejs
+++ b/views/spi/index.ejs
@@ -1,3 +1,3 @@
 <section class="container">
-    <h1 class="text text-center">SPI <%- spi_name %></h1>
+    <h1 class="text text-center">SPI <%- page_name %></h1>
 </section>
