--- a/assets/spi_src/develop/draggable/templates/draggable.tpl.html
+++ b/assets/spi_src/develop/draggable/templates/draggable.tpl.html
@@ -6,7 +6,7 @@
         -khtml-user-select: none;
         -webkit-user-select: none;
         user-select: none;
-        Required to make elements draggable in old WebKit 
+        Required to make elements draggable in old WebKit
         -khtml-user-drag: element;
         -webkit-user-drag: element;
     }
@@ -50,16 +50,20 @@
         border-top-right-radius: 10px;
     }
 </style>
-<section>   
+<style>
+    .column.over {
+        border: 2px dashed #000;
+    }
+</style>
+<section>
     <h1 class="text text-center">Dragg</h1>
-    
-    <hr>  
+    <hr>
     <div id="columns">
         <div ng-repeat="item in blockTemplates" class="column" draggable="true"><header>{{item.name}}</header></div>
-<!--        <div class="column" draggable="true"><header>Статья</header></div>
-        <div class="column" draggable="true"><header>Реклама</header></div>
-        <div class="column" draggable="true"><header>Врезка</header></div>-->
+        <!--        <div class="column" draggable="true"><header>Статья</header></div>
+                <div class="column" draggable="true"><header>Реклама</header></div>
+                <div class="column" draggable="true"><header>Врезка</header></div>-->
     </div>
-    
+
 </section>
 <!-- //template "draggable.tpl.html"-->
