--- a/client_spa_src/src/common/dialogService/templates/deleteDialogTemplate.tpl.html
+++ b/client_spa_src/src/common/dialogService/templates/deleteDialogTemplate.tpl.html
@@ -10,6 +10,6 @@
 </div>
 
 <div class="modal-footer">
-    <button type="button" class="btn btn-default" ng-click="yes()">Yes</button>
-    <button type="button" class="btn btn-primary" ng-click="no()">No</button>
+    <button type="button" class="btn btn-default" ng-click="yes()">{{"DIALOGS_YES" | translate}}</button>
+    <button type="button" class="btn btn-primary" ng-click="no()">{{"DIALOGS_CANCEL" | translate}}</button>
 </div>
