--- a/client_spa_src/src/home/templates/home.tpl.html
+++ b/client_spa_src/src/home/templates/home.tpl.html
@@ -1,31 +1,10 @@
-<!-- template "home.tpl.html"--> 
-<section class="container-fuid">
-    <h2>Главная</h2>
-    <div class="col-sm-2">
-        <ul class="list-group">
-            <li ng-repeat="item in listNewspapers" class="list-group-item" ng-click="onClickReals(item,$index)">
-                <span class="badge"><a href="item.id">{{item.pages.length}}</a></span>
-                {{item.name}}
-            </li>
-            <!--
-            <li class="list-group-item">
-                            <span class="badge">1</span>
-                            Morbi leo risus
-                        </li>
-            -->
-        </ul>
+<!-- template "home.tpl.html"-->
+<section class="container-fluid">
+    <div class="jumbotron">
+        <h1>Визуальный планировщик</h1>
+        <p>Демонстрационное веб-приложения планирования выпусков(номеров) газет с графическим режимом.</p>
+        <p><a ui-sref="releases" class="btn btn-primary btn-lg">Приступить >></a></p>
     </div>
 
-    <div class="col-sm-10" ui-view>
-        <aside ng-if="!!listPages" class="row" >
-            <h3>Список страниц(полос)</h3>
-            <ul class="list-group">
-                <li ng-repeat="item in listPages" class="list-group-item">
-                    <span class="badge"><a ui-sref=".release({id:{{item.id}}})">{{item.blocks.length}}</a></span>
-                    {{item.name}}
-                </li>
-            </ul>
-        </aside>
-    </div>
 </section>
 <!-- //template "home.tpl.html"-->
