--- a/client_spa_src/src/users/templates/form.userprofile.tpl.html
+++ b/client_spa_src/src/users/templates/form.userprofile.tpl.html
@@ -1,33 +1,30 @@
 <!-- template "form.userprofile.tpl.html"-->
 <!-- Modal -->
 <div class="modal-content">
-    <div class="modal-header"> 
-        <h4 ng-if="!currEntity.userId">Add New User</h4>
-        <h4 ng-if="currEntity.userId">Edit User <strong>{{currEntity.userName}}</strong></h4>
+    <div class="modal-header">
+        <h4 ng-if="!currEntity.userId">Новый пользователь</h4>
+        <h4 ng-if="currEntity.userId">Пользователь <strong>{{currEntity.userName}}</strong></h4>
     </div>
     <form name="EditForm" class="form-horizontal" role="form" ng-submit="onSave(editEntity)" loading-container="isBusy" novalidate>
         <div class="modal-body">
-
             <div class="form-group">
                 <label class="control-label col-sm-4" for="model_name">
-                    Email address
+                    Email
                 </label>
                 <div class="col-sm-8">
                     <input class="form-control" ng-model="editEntity.email" id="model_name" type="email" required>
                 </div>
-
             </div>
             <div class="form-group">
                 <label class="control-label col-sm-4" for="attribute_name">
                     Имя
                 </label>
-
                 <div class="col-sm-8">
-                    <input class="form-control" ng-model="editEntity.userName" id="attribute_name" type="text"
+                    <input class="form-control" ng-model="editEntity.name" id="attribute_name" type="text"
                            required>
                 </div>
 
-            </div> 
+            </div>
             <div class="form-group">
                 <label class="control-label col-sm-4" for="sample_data">
                     Должность
@@ -40,7 +37,7 @@
                 </div>
             </div>
         </div>
-        <div class="modal-footer"> 
+        <div class="modal-footer">
             <button type="submit" class="btn btn-primary btn_save" ng-disabled="EditForm.$invalid">Submit</button>
             <button type="button" class="btn btn-default btn_cancel" ng-click="onCancel()">Cancel</button>
         </div>
