--- a/client_spa_src/src/users/templates/users.tpl.html
+++ b/client_spa_src/src/users/templates/users.tpl.html
@@ -2,22 +2,22 @@
 <section ui-view="content" class="tasks">
     <div class="col-sm-12 no-padding" loading-container="isBusy || tableParams.settings().$loading">
         <div class="col-sm-12">
-            <h3 class="text text-left task-title col-sm-12">
-                Manage users
-                <!--                <button
+<!--            <h3 class="text text-left task-title col-sm-12">
+                Управление пользователями
+                                <button
                                                               ng-click="onOpenInstruction()"
                                                               type="button"
                                                               class="btn btn-info pull-right">
                                     Instruction
-                                </button>-->
-            </h3>
+                                </button>
+            </h3>-->
 
-            <hr/>
-            <div class="pusher-15"></div>
+<!--            <hr/>
+            <div class="pusher-15"></div>-->
 
             <div class="col-sm-12 no-padding">
                 <ul class="nav nav-tabs" role="tablist">
-                    <li class="active"><a>Users</a></li>
+                    <li class="active"><a>Управление пользователями</a></li>
                 </ul>
             </div>
 
@@ -28,7 +28,7 @@
                     <search-box ng-model="tableParams.filter()['userName']"></search-box>
                 </div>
                 <div class="col-sm-6">
-                    <button ng-click="onAddUser()" class="btn btn-primary pull-right">Add new User</button>
+                    <button ng-click="onAddUser()" class="btn btn-primary pull-right">Добавить</button>
                 </div>
 
                 <div class="pusher-15"></div>
@@ -37,18 +37,18 @@
                     <table ng-table="tableParams" class="table table-striped table-fixed">
                         <tbody>
                             <tr ng-repeat="item in $data">
-                                <td data-title="'Имя'" sortable="'userName'">{{item.userName}}</td>
-                                <td data-title="'Email'" sortable="'email'">{{item.email}}</td> 
-                                <td data-title="'Role'" sortable="'role'" >{{item.role}}</td>
-                                <td data-title="'Controls'">
-                                    <button class="btn btn-xs btn-warning" ng-click="onEditUser(item)">Edit</button>
-                                    <button class="btn btn-xs btn-danger" ng-click="onDeleteUser(item)">Delete</button>
+                                <td data-title="'Имя'" sortable="'name'">{{item.name}}</td>
+                                <td data-title="'Email'" sortable="'email'">{{item.email}}</td>
+                                <td data-title="'Роль(должность)'" sortable="'role'" >{{item.role}}</td>
+                                <td data-title="'Действия'">
+                                    <button class="btn btn-xs btn-warning" ng-click="onEditUser(item)">Изменить</button>
+                                    <button class="btn btn-xs btn-danger" ng-click="onDeleteUser(item)">Удалить</button>
                                 </td>
                             </tr>
                         </tbody>
                     </table>
                 </div>
-            </div> 
+            </div>
         </div>
     </div>
 </section>
