--- a/client_spa_src/src/about/templates/about.tpl.html
+++ b/client_spa_src/src/about/templates/about.tpl.html
@@ -13,6 +13,33 @@
             <p class="list-group-item-text">Client-side MVC framework </p>
         </a>
     </div>
+    <p>https://developer.mozilla.org/en-US/docs/Web/API/EventTarget.addEventListener</p>
+    <table class="browserref notranslate">
+        <tbody><tr>
+                <th style="width:20%;font-size:16px;text-align:left;">Method</th>
+                <th style="width:16%;" class="bsChrome" title="Chrome"></th>
+                <th style="width:16%;" class="bsIE" title="Internet Explorer"></th>
+                <th style="width:16%;" class="bsFirefox" title="Firefox"></th>
+                <th style="width:16%;" class="bsSafari" title="Safari"></th>
+                <th style="width:16%;" class="bsOpera" title="Opera"></th>                
+            </tr>
+            <tr>
+                <td style="text-align:left;">addEventListener()</td>
+                <td>1.0</td>
+                <td>9.0</td>
+                <td>1.0</td>
+                <td>1.0</td>
+                <td>7.0</td>
+            </tr>
+            <tr>
+                <td style="text-align:left;">removeEventListener()</td>
+                <td>1.0</td>
+                <td>9.0</td>
+                <td>1.0</td>
+                <td>1.0</td>
+                <td>7.0</td>
+            </tr>
+        </tbody></table>
     <!--    <ul class="nav nav-tabs">
             <li class="active"><a href="#home" data-toggle="tab">Общее</a></li>
             <li><a href="#profile" data-toggle="tab">Profile</a></li>
