--- a/client_spa_src/src/pageedit/templates/pageedit_index.tpl.html
+++ b/client_spa_src/src/pageedit/templates/pageedit_index.tpl.html
@@ -1,28 +1,34 @@
 <!-- template "about.tpl.html"-->
-<section class="container">
-    <h3>
-        Редактор полосы(сраницы)
-    </h3>
+<section class="container"> 
     <div class="btn-toolbar">
         <div class="btn-group">
-             <a ng-repeat="item in listBlockinfoTpl" draggable-blockinfo data-value="item" class="btn btn-default">{{item.name}}</a>
-<!--            <a draggable-blockinfo date-value="" href="#" class="btn btn-default">1</a>
-            <a draggable-blockinfo href="#" class="btn btn-default">2</a>
-            <a draggable-blockinfo href="#" class="btn btn-default">3</a>
-            <a draggable-blockinfo href="#" class="btn btn-default">4</a>-->
+            <a ng-repeat="item in listBlockinfoTpl" draggable-blockinfo data-value="item" class="btn btn-default">{{item.name}}</a>
+            <!--            <a draggable-blockinfo date-value="" href="#" class="btn btn-default">1</a>
+                        <a draggable-blockinfo href="#" class="btn btn-default">2</a>
+                        <a draggable-blockinfo href="#" class="btn btn-default">3</a>
+                        <a draggable-blockinfo href="#" class="btn btn-default">4</a>-->
         </div>
     </div>
     <style>
-    .dropblok.over {
-        border: 2px dashed #000;
-    }
-</style>
-    <section class="col-sm-12 dropblok" drop-blockinfo data-pageId="1" drop="handleDrop()">
-        <div>Содержание </div>
-        <ul class="list-group">
-            <li ng-repeat="item in editPage.infoblocks"> {{item.name}}</li>
-        </ul>
-    </section>
-<button draggable-position class="btn btn-success">Test</button>
+        .dropblok.over {
+            border: 2px dashed #000;
+        }
+    </style>
+    <div class="row">
+        <section class="col-sm-4 dropblok" drop-blockinfo  drop2="handleDrop" drop="handleDrop(blockinfo)">
+            <div>Содержание </div>
+            <ul class="list-group">
+                <li ng-repeat="item in editPage.infoblocks"> {{item.name}}</li>
+            </ul>
+            {{editPage.infoblocks| json}}
+        </section>
+        <div class="col-sm-4">
+            <viewer-page-newspaper mouse-capture ng-model="editPage.infoblocks">test_error
+            
+            </viewer-page-newspaper>
+        </div>
+        
+    </div>
+    <button draggable-position class="btn btn-success">Test</button>
 </section>
 <!-- //template "about.tpl.html"-->
