--- a/client_spa_src/src/pageedit/directives/templates/viewer_page_newspaper.tpl.html
+++ b/client_spa_src/src/pageedit/directives/templates/viewer_page_newspaper.tpl.html
@@ -1,8 +1,45 @@
-<svg xmlns="http://www.w3.org/2000/svg"> 
+<svg xmlns="http://www.w3.org/2000/svg"
+     ng-mousedown="mouseDown($event)"
+     ng-mousemove="mouseMove($event)"  > 
+    <deps>
+        <linearGradient 
+            spreadMethod="pad" 
+            y2="0" 
+            x2="0" 
+            y1="1" 
+            x1="0" 
+            id="nodeBackgroundGradient"
+            >
+            <stop 
+                offset="0" 
+                stop-opacity="0.99609" 
+                stop-color="#56aaff"
+                />
+            <stop 
+                offset="0.63934" 
+                stop-opacity="0.99219" 
+                stop-color="#d0d0e5"
+                />
+        </linearGradient>
+    </deps>
     <g ng-repeat="node in model"
        ng-mousedown="nodeMouseDown($event, node)"
-       ng-attr-transform="translate({{node.x()}}, {{node.y()}})"
-       >{{($scope.$isSelect == node.id)}}
-        <rect  ng-click="setSelect(node)" ng-attr-x="{{10 * $index}}"  ng-attr-y="{{10 * $index}}" width="20" height="20" style="fill:rgb(0,0,255);stroke-width:3;stroke:rgb(0,0,0)" ></rect>
+       ng-attr-transform="translate({{node.x}}, {{node.y}})"
+       > 
+        <rect  ng-click="setSelect(node)"
+               ng-attr-x="{{10 * $index}}"
+               ng-attr-y="{{10 * $index}}" 
+               ng-attr-width="{{node.width||(node.width = 25)}}" 
+               ng-attr-height="{{node.height||(node.height=20)}}" 
+               style="stroke-width:3;stroke:rgb(0,0,0)"
+               fill="url(#nodeBackgroundGradient)"></rect>
+        <text
+            ng-attr-x="{{node.width / 2}}"
+            y="25"
+            text-anchor="middle"
+            alignment-baseline="middle"
+            >
+            {{node.name}}
+        </text>
     </g>
 </svg>
