--- a/client_spa_src/src/home/templates/home.tpl.html
+++ b/client_spa_src/src/home/templates/home.tpl.html
@@ -3,7 +3,7 @@
     <div class="jumbotron">
         <h1>Визуальный планировщик</h1>
         <p>Демонстрационное веб-приложения планирования выпусков(номеров) газет с графическим режимом.</p>
-        <p><a ui-sref="releases" class="btn btn-primary btn-lg">Приступить >></a></p>
+        <p><a ui-sref="referencies.releases" class="btn btn-primary btn-lg">Приступить >></a></p>
     </div>
 
 </section>
