--- a/client_spa_src/src/referencies/templates/referencies.tpl.html
+++ b/client_spa_src/src/referencies/templates/referencies.tpl.html
@@ -1,30 +1,5 @@
 <!-- template "referencies.tpl.html"--> 
-<section class="container-fuid">
-    <div class="col-sm-2">
-        <ul class="list-group">
-            <li ng-repeat="item in listNewspapers" class="list-group-item" ng-click="onClickReals(item,$index)">
-                <span class="badge"><a href="item.id">{{item.pages.length}}</a></span>
-                {{item.name}}
-            </li>
-            <!--
-            <li class="list-group-item">
-                            <span class="badge">1</span>
-                            Morbi leo risus
-                        </li>
-            -->
-        </ul>
-    </div>
-
-    <div class="col-sm-10" ui-view>
-        <aside ng-if="!!listPages" class="row" >
-            <h3>Список страниц(полос)</h3>
-            <ul class="list-group">
-                <li ng-repeat="item in listPages" class="list-group-item">
-                    <span class="badge"><a ui-sref=".release({id:{{item.id}}})">{{item.blocks.length}}</a></span>
-                    {{item.name}}
-                </li>
-            </ul>
-        </aside>
-    </div>
+<section class="container-fuid" ui-view>
+     
 </section>
 <!-- //template "referencies.tpl.html"-->
