--- a/client_spa_src/src/pageedit/templates/pageedit_index.tpl.html
+++ b/client_spa_src/src/pageedit/templates/pageedit_index.tpl.html
@@ -43,7 +43,7 @@ Drag selection rectangle.
             </li>
         </ul>
     </div>
- 
+
     <div class="row" mouse-capture>
 
 
@@ -121,16 +121,16 @@ Drag selection rectangle.
                            tooltip-append-to-body="true" 
                            ng-dblclick="onEditBlockinfo(node)"
                            ></rect>
-                                        <text 
-                                            ng-attr-x="{{node.width / 2}}"
-                                            ng-attr-y="{{node.height / 2}}"
-                                            x="0"
-                                            y="0"
-                                            text-anchor="middle"
-                                            alignment-baseline="middle"
-                                            >
-                                            {{node.name}}
-                                        </text> 
+                    <text 
+                        ng-attr-x="{{node.width / 2}}"
+                        ng-attr-y="{{node.height / 2}}"
+                        x="0"
+                        y="0"
+                        text-anchor="middle"
+                        alignment-baseline="middle"
+                        >
+                        {{node.name}}
+                    </text> 
 
                 </g>
                 <rect
@@ -151,16 +151,36 @@ Drag selection rectangle.
                         ng-attr-y="{{dragResizingRect.y}}"
                         ng-attr-width="{{dragResizingRect.width}}"
                         ng-attr-height="{{dragResizingRect.height}}"
-                        >
-
+                        >  
+                    <rect x="0" y="0" width="100%" height="100%" fill-opacity="0.5" opacity="1" 
+                          class="moveActionTrigger" />
+                    <line x1="0" y1="0" x2="100%" y2="0" stroke="#000" stroke-width="5" opacity="1" 
+                          class="topActionTrigger" />
+                    <line x1="0" y1="100%" x2="100%" y2="100%" stroke="#000" stroke-width="5" opacity="1" 
+                          class="bottomActionTrigger" />
+                    <line x1="0" y1="0" x2="0" y2="100%" stroke="#000" stroke-width="5" opacity="1" 
+                          class="leftActionTrigger" />
+                    <line x1="100%" y1="0" x2="100%" y2="100%" stroke="#000" stroke-width="5" opacity="1" 
+                          class="rightActionTrigger" />
+                    <circle cx="0" cy="0" r="8" stroke="#000" stroke-width="0" fill="#000" opacity="1" 
+                            class="topLeftActionTrigger" />
+                    <circle cx="100%" cy="0" r="8" stroke="#000" stroke-width="0" fill="#000" opacity="1" 
+                            class="topRightActionTrigger" />
+                    <circle cx="0" cy="100%" r="8" stroke="#000" stroke-width="0" fill="#000" opacity="1" 
+                            class="bottomLeftActionTrigger" />
+                    <circle cx="100%" cy="100%" r="8" stroke="#000" stroke-width="0" fill="#000" opacity="1" 
+                            class="bottomRightActionTrigger" />
+                    </rect> 
+                        <circle cx="100%" cy="100%" r="8" stroke="#000" stroke-width="0" fill="#000" opacity="1" 
+                            class="bottomRightActionTrigger" />
                 </g>
             </svg>   
         </div> 
-        <section class="col-sm-2 dropblok" drop-blockinfo  dop-param="currEditPage" drop="handleDropBlockInfo">
+        <section class="col-sm-2 dropblok"  drop-blockinfo  dop-param="currEditPage" drop="handleDropBlockInfo">
             <div>Содержание </div> 
 
             <ul class="list-group">
-                  <li class="list-group-item col-sm-12" ng-repeat="item in editNewspaper.blockInfo| filter: {page:page}"> 
+                <li class="list-group-item col-sm-12" ng-repeat="item in editNewspaper.blockInfo| filter: {page:page}"> 
                     <div class="col-sm-4">  {{item.name}}</div> 
                 </li>
 
