--- a/client_spa_src/src/referencies/templates/release_list.tpl.html
+++ b/client_spa_src/src/referencies/templates/release_list.tpl.html
@@ -10,10 +10,10 @@
         <div class="col-sm-12 no-padding content-table">
             <div class="pusher-15"></div>
 
-            <div class="col-sm-6">
+<!--            <div class="col-sm-6">
                 <search-box ng-model="tableParams.filter()['userName']"></search-box>
-            </div>
-            <div class="col-sm-6">
+            </div>-->
+            <div class="pull-right">
                 <button ng-click="onAddUser()" class="btn btn-primary pull-right">Добавить</button>
             </div>
 
@@ -23,7 +23,7 @@
                 <table ng-table="tableParams" class="table table-striped table-fixed">
                     <tbody>
                         <tr ng-repeat="item in $data">
-                            <td data-title="'Имя'" sortable="'name'">{{item.name}}</td>
+                            <td data-title="'Имя'" sortable="'name'"><a ui-sref="pageedit({id:item.id})"> {{item.name}}</a></td>
                             <td data-title="'Описание'" sortable="'email'">{{item.description}}</td> 
                             <td data-title="'Кол-во страниц(полос)'" sortable="'pagesCount'">{{item.pagesCount}}</td> 
                             <td data-title="'Действия'">
